<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="edu.maryland.leafsnap.activity.OptionsAccountActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/change_username_button"
            android:text="@string/change_username"
            android:layout_width="@dimen/options_button_width"
            android:layout_height="@dimen/options_button_height"
            android:textColor="@color/white"
            android:drawableRight="@drawable/ic_action_next_item"
            android:gravity="left|center_vertical"
            android:layout_gravity="center_horizontal"
            android:onClick="onChangeUsernameButtonClick"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" />

        <Button
            android:id="@+id/different_login_button"
            android:text="@string/different_login"
            android:layout_width="@dimen/options_button_width"
            android:layout_height="@dimen/options_button_height"
            android:textColor="@color/white"
            android:drawableRight="@drawable/ic_action_next_item"
            android:gravity="left|center_vertical"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/change_username_button"
            android:layout_alignLeft="@+id/change_username_button"
            android:layout_alignStart="@+id/change_username_button"
            android:onClick="onDifferentLoginButtonClick" />

        <TextView
            android:id="@+id/current_user"
            android:text="@string/current_user"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/different_login_button"
            android:layout_alignLeft="@+id/different_login_button"
            android:layout_alignStart="@+id/different_login_button"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/username"
            android:text="@string/not_logged_in"
            android:textColor="@color/leafsnap_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignTop="@+id/current_user"
            android:layout_alignRight="@+id/different_login_button"
            android:layout_alignEnd="@+id/different_login_button" />

    </RelativeLayout>
</ScrollView>