<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context="edu.maryland.leafsnap.activity.AccountActionActivity">


    <TextView
        android:textColor="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/account_action"
        android:id="@+id/account_action"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <LinearLayout
        android:id="@+id/username_layout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_action"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/username"
            android:singleLine="true"
            android:id="@+id/username"
            android:layout_gravity="center_vertical" />

        <EditText
            style="@style/EditText.Leafsnap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_input"
            android:singleLine="true"
            android:hint="@string/username"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:text="@string/password"
            android:id="@+id/password"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="center_vertical" />

        <EditText
            style="@style/EditText.Leafsnap"
            android:hint="@string/password"
            android:id="@+id/password_input"
            android:layout_width="fill_parent"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <Button
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_action"
        android:layout_below="@id/password_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_alignRight="@+id/password_layout"
        android:layout_alignEnd="@+id/password_layout"
        android:onClick="onActionButtonClick" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/action_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/account_status_checkmark"
            android:src="@drawable/check_right"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/account_status"
            android:text="@string/todo"
            android:visibility="gone"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/collection_status_checkmark"
            android:src="@drawable/check_right"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/collection_status"
            android:text="@string/todo"
            android:visibility="gone"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

</RelativeLayout>
